[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmess"
version = "1.0.0"
description = "An AI manager that balances college mess food preparation to minimize waste and prevent shortages."
authors = [
  { name = "SmartMess Team" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
